--- a/package.json
+++ b/package.json
@@ -9,26 +9,50 @@
         "eslint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
         "preview": "vite preview",
         "prettier:comment": "自动格式化当前目录下的所有文件",
-        "prettier": "prettier --write"
+        "prettier": "prettier --write",
+        "commit:comment": "引导设置规范化的提交信息",
+        "commit": "git-cz"
+    },
+    "config": {
+        "commitizen": {
+            "path": "node_modules/cz-customizable"
+        }
+    },
+    "lint-staged": {
+        "*.{js,ts}": [
+            "npm run eslint",
+            "npm run prettier"
+        ]
     },
     "dependencies": {
         "@vueuse/core": "^8.5.0",
+        "axios": "^0.27.2",
+        "element-plus": "^2.2.2",
         "pinia": "^2.0.14",
         "vue": "^3.2.25",
         "vue-router": "^4.0.15"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.0.0",
+        "@commitlint/config-conventional": "^17.0.0",
         "@types/node": "^17.0.35",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
         "@typescript-eslint/parser": "^5.26.0",
         "@vitejs/plugin-vue": "^2.3.3",
+        "commitizen": "^4.2.4",
+        "commitlint-config-cz": "^0.13.3",
+        "cz-conventional-changelog": "^3.3.0",
+        "cz-customizable": "^6.3.0",
         "eslint": "^8.16.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-vue": "^9.0.1",
+        "husky": "^8.0.1",
+        "lint-staged": "^12.4.2",
         "prettier": "^2.6.2",
         "typescript": "^4.5.4",
         "vite": "^2.9.9",
+        "vite-plugin-style-import": "^2.0.0",
         "vue-tsc": "^0.34.7"
     }
 }
